Fix lighthouse contrast error for menu

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,7 @@
 :root {
     --white: #fff;
     --grey: #dde2e9;
+    --navy-blue: #3e5070;
     --dark-blue: #0B1522;
     --brown: #752303;
     --cafe: #302201;
@@ -257,7 +258,6 @@ iframe {
 
 /* Login page style */
 .background-container {
-    background-color: #08b4ae;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -432,10 +432,21 @@ p {
 }
 
 .background-container {
-    background-color: #f5f5f5;
+    background-color: var(--white);
     padding: 20px;
     border-radius: 10px;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: -1px 1px 8px -1px rgba(0, 0, 0, 0.51);
+    -webkit-box-shadow: -1px 1px 8px -1px rgba(0, 0, 0, 0.51);
+    -moz-box-shadow: -1px 1px 8px -1px rgba(0, 0, 0, 0.51);
+}
+
+.menu-title,
+.menu-p {
+    color: black;
 }
 
 .menu-container {
@@ -469,12 +480,15 @@ h2 {
 /* Menu items styles */
 
 .meal {
-    /* display: flex;*/
     margin: 5% 0;
-    background-color: var(--grey);
+    background-color: var(--navy-blue);
     border-radius: 5%;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     overflow: hidden;
+}
+
+.meal p {
+    color: white;
 }
 
 .dish img {
@@ -492,7 +506,7 @@ h2 {
 
 .meal-name {
     font-size: 20px;
-    color: var(--brown);
+    color: var(--vivid-amber);
     margin: 0;
     text-shadow: 0px 2px 2px rgba(202, 198, 198, 0.2);
 }
@@ -506,8 +520,7 @@ h2 {
 .description {
     white-space: normal;
     font-size: 16px;
-    margin: 10px 0;
-    padding: 0 5%;
+    padding: 2% 5% 5%;
 }
 
 /* Horizontal rule style */
